src/objects/ParamRisqueEntite__c.object
<CustomObject>
    <fields>
        <fullName>apparu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>appeared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>entite__c</fullName>
        <label>Structure</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Entite_Risk_Parameters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>risque__c</fullName>
        <label>risk</label>
        <referenceTo>Risque__c</referenceTo>
        <relationshipName>Entite_Risk_Parameters</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>seuilApparution__c</fullName>
        <label>Apparition threshold</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unite__c</fullName>
        <label>unit</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Risk Tracking Parameter</label>
    <nameField>
        <label>Entite Risk Parameter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Tracking Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>